# DSS_KedroWorkshop-myVersion

./: README.md
kedro-workshop/: .telemetry  README.md  pyproject.toml  session_store.db
kedro-workshop/.viz/: stats.json
kedro-workshop/conf/base/: catalog.yml  parameters_data_preparation.yml  parameters_model_evaluation.yml  parameters_model_training.yml
kedro-workshop/src/kedro_workshop/pipelines/data_preparation/: __init__.py  nodes.py  pipeline.py
kedro-workshop/src/kedro_workshop/pipelines/model_evaluation/: __init__.py  nodes.py  pipeline.py
kedro-workshop/src/kedro_workshop/pipelines/model_training/: __init__.py  nodes.py  pipeline.py
kedro-workshop/tests/pipelines/data_preparation/: test_pipeline.py
kedro-workshop/tests/pipelines/model_evaluation/: test_pipeline.py
kedro-workshop/tests/pipelines/model_training/: test_pipeline.py
