[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_workshop"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-workshop = "kedro_workshop.__main__:main"

[tool.kedro]
package_name = "kedro_workshop"
project_name = "kedro_workshop"
kedro_init_version = "0.19.8"
tools = [ "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_workshop.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
